issues with spacing

--- a/resources/scss/pages/_historical-thresholds.scss
+++ b/resources/scss/pages/_historical-thresholds.scss
@@ -21,10 +21,11 @@ $animation-duration: 0.4s;
 
 #historical-thresholds-viewport {
   background-color: $white;
-  height: calc(100% - 48px - 100px) !important;
-  min-height: calc(100% - 48px - 100px) !important;
+  height: calc(100% - 48px - 6px - 100px) !important;
+  min-height: calc(100% - 48px - 6px - 100px) !important;
   overflow: auto !important;
   flex: 1 1 auto !important;
+  margin-bottom: 6px;
 
   &:after {
     content: '';
